--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@400;700&display=swap'); 
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -16,18 +14,29 @@ body {
 }
 
 @layer base {
-  /* Main Header */
-
   html {
     @apply font-mono
   }
-
+  /* Main Header && Navigation */
   .main-header { 
-    @apply w-full h-16 flex items-center fixed top-0 left-0 bg-shyGreen-400 shadow-md px-1 z-10 md:justify-between
+    @apply w-full h-16 flex items-center fixed top-0 left-0 bg-shyGreen-500 shadow-md px-1 z-10 md:justify-between
   }
   
   main {
     @apply mt-20
+  }
+
+  .nav-link {
+    @apply list-none m-0 p-0 w-full h-full flex flex-col justify-center items-center md:flex-row
+  }
+
+  .nav-link a,
+  .active {
+    @apply text-white p-2 no-underline hover:bg-ivory hover:text-black active:bg-ivory rounded-lg duration-200 focus:bg-ivory focus:text-black ml-4 
+  }
+
+  .nav-link button {
+    @apply bg-none p-2 cursor-pointer hover:bg-ivory hover:text-black active:bg-ivory rounded-lg duration-200 focus:bg-ivory focus:text-black
   }
 
 }
