style: places Components apply tailwind

--- a/src/index.css
+++ b/src/index.css
@@ -68,18 +68,18 @@ body {
   }
 
   /* Form Component */
-  .button-test {
+  .button {
     @apply py-2 px-6 rounded-md bg-shyGreen-300 text-shyGreen cursor-pointer mr-4 no-underline inline-block focus:outline-none 
   }
 
-  .button-test:hover,
-  .button-test:active {
+  .button:hover,
+  .button:active {
     @apply bg-shyGreen-400 border-shyGreen-400 text-white
   }
 
-  .button-test:disabled,
-  .button-test:hover:disabled,
-  .button-test:active:disabled {
+  .button:disabled,
+  .button:hover:disabled,
+  .button:active:disabled {
     @apply bg-disabled text-body border-disabled cursor-not-allowed
   }
 
